--- a/handy-win32src-0.95-patched/gui-windows/lynxmenu.rc
+++ b/handy-win32src-0.95-patched/gui-windows/lynxmenu.rc
@@ -329,16 +329,16 @@ BEGIN
     ICON            IDI_ICON1,IDC_STATIC,50,14,20,20
     CTEXT           "Lynx Emulator for Windows",IDC_STATIC,77,19,86,8
     CTEXT           "Version X.XX",IDC_ABOUT_VERSION,69,38,75,8
-    CTEXT           "http://lynxdev.atari.org/handy",IDC_STATIC,64,61,96,8
+    CTEXT           "https://github.com/8bit-Dude/handy-fork",IDC_STATIC,18,61,176,8
     EDITTEXT        IDC_ABOUT_MANUFACTURER,42,147,129,13,ES_CENTER | ES_READONLY
     EDITTEXT        IDC_ABOUT_CARTRIDGE,42,166,129,13,ES_CENTER | ES_READONLY
     CTEXT           "(Build XXXXXX)",IDC_ABOUT_BUILD,66,50,82,8
-    CTEXT           "Core Updates B. Spruck 2016",IDC_STATIC,18,87,176,8
-    CTEXT           "This is a modified version of the original handy.",IDC_STATIC,18,77,189,8
-    CTEXT           "Original (old) version: http://handy.sourceforge.net",IDC_STATIC,14,102,186,8
+	CTEXT           "8bit-Hub Integration A. Beaucamp 2019", IDC_STATIC, 18,77,176,8
+	CTEXT           "Core Updates B. Spruck 2016",IDC_STATIC,18,87,176,8
+    CTEXT           "Original version: http://handy.sourceforge.net",IDC_STATIC,14,102,186,8
 END
 
-IDD_INFO_BOX DIALOGEX 0, 0, 109, 84
+IDD_INFO_BOX DIALOGEX 0, 0, 109, 94
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION
 CAPTION "Handy Status Info"
 FONT 8, "MS Sans Serif", 0, 0, 0x1
@@ -352,7 +352,11 @@ BEGIN
     LTEXT           "Emulation Max %",IDC_STATIC,7,64,54,8
     LTEXT           "Frame Skip",IDC_STATIC,7,28,64,8
     EDITTEXT        IDC_STATUS_SKIP,75,26,27,13,ES_AUTOHSCROLL | ES_READONLY | ES_NUMBER
-END
+	LTEXT           "Hub Tx/Rx/Bad", IDC_STATIC, 7, 78, 64, 8
+	EDITTEXT        IDC_STATUS_HUB_TX,  56, 76, 16, 13, ES_AUTOHSCROLL | ES_READONLY | ES_NUMBER
+	EDITTEXT        IDC_STATUS_HUB_RX,  75, 76, 16, 13, ES_AUTOHSCROLL | ES_READONLY | ES_NUMBER
+	EDITTEXT        IDC_STATUS_HUB_BAD, 94, 76, 10, 13, ES_AUTOHSCROLL | ES_READONLY | ES_NUMBER
+	END
 
 IDD_WARNING DIALOG 0, 0, 224, 109
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
@@ -384,12 +388,16 @@ BEGIN
     EDITTEXT        IDC_NETWORK_ADDRESS,7,30,172,12,ES_AUTOHSCROLL
 END
 
-IDD_KEYCONF DIALOG 0, 0, 277, 141
+IDD_KEYCONF DIALOG 0, 0, 277, 196
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Handy Button Configuration"
 FONT 8, "MS Sans Serif"
 BEGIN
-    DEFPUSHBUTTON   "Done",IDOK,10,120,255,14
+	LTEXT           "Caption", IDC_KEYGET, 180, 10, 90, 25
+	LTEXT           "8bit-Hub Joy#1: ", IDC_STATIC, 20, 125, 230, 25
+	LTEXT           "8bit-Hub Joy#2: ", IDC_STATIC, 20, 150, 230, 25
+
+    DEFPUSHBUTTON   "Done",IDOK,10,175,255,14
     PUSHBUTTON      "UP",IDC_KEYDEF_UP,45,10,35,30,BS_CENTER | BS_VCENTER | BS_MULTILINE
     PUSHBUTTON      "LEFT",IDC_KEYDEF_LEFT,10,45,35,30,BS_CENTER | BS_VCENTER | BS_MULTILINE
     PUSHBUTTON      "RIGHT",IDC_KEYDEF_RIGHT,80,45,35,30,BS_CENTER | BS_VCENTER | BS_MULTILINE
@@ -399,7 +407,20 @@ BEGIN
     PUSHBUTTON      "OPT2",IDC_KEYDEF_OPT2,135,80,35,30,BS_CENTER | BS_VCENTER | BS_MULTILINE
     PUSHBUTTON      "A",IDC_KEYDEF_A,190,45,35,30,BS_CENTER | BS_VCENTER | BS_MULTILINE
     PUSHBUTTON      "B",IDC_KEYDEF_B,230,45,35,30,BS_CENTER | BS_VCENTER | BS_MULTILINE
-    LTEXT           "Caption",IDC_KEYGET,180,10,90,25
+
+	PUSHBUTTON      "UP", IDC_HUB1_UP, 75, 120, 25, 20, BS_CENTER | BS_VCENTER | BS_MULTILINE
+	PUSHBUTTON      "DN", IDC_HUB1_DOWN, 105, 120, 25, 20, BS_CENTER | BS_VCENTER | BS_MULTILINE
+	PUSHBUTTON      "LF", IDC_HUB1_LEFT, 135, 120, 25, 20, BS_CENTER | BS_VCENTER | BS_MULTILINE
+	PUSHBUTTON      "RG", IDC_HUB1_RIGHT, 165, 120, 25, 20, BS_CENTER | BS_VCENTER | BS_MULTILINE
+	PUSHBUTTON      "A", IDC_HUB1_A, 195, 120, 25, 20, BS_CENTER | BS_VCENTER | BS_MULTILINE
+	PUSHBUTTON      "B", IDC_HUB1_B, 225, 120, 25, 20, BS_CENTER | BS_VCENTER | BS_MULTILINE
+
+	PUSHBUTTON      "UP", IDC_HUB2_UP, 75, 145, 25, 20, BS_CENTER | BS_VCENTER | BS_MULTILINE
+	PUSHBUTTON      "DN", IDC_HUB2_DOWN, 105, 145, 25, 20, BS_CENTER | BS_VCENTER | BS_MULTILINE
+	PUSHBUTTON      "LF", IDC_HUB2_LEFT, 135, 145, 25, 20, BS_CENTER | BS_VCENTER | BS_MULTILINE
+	PUSHBUTTON      "RG", IDC_HUB2_RIGHT, 165, 145, 25, 20, BS_CENTER | BS_VCENTER | BS_MULTILINE
+	PUSHBUTTON      "A", IDC_HUB2_A, 195, 145, 25, 20, BS_CENTER | BS_VCENTER | BS_MULTILINE
+	PUSHBUTTON      "B", IDC_HUB2_B, 225, 145, 25, 20, BS_CENTER | BS_VCENTER | BS_MULTILINE
 END
 
 IDD_KEYGET DIALOG 0, 0, 186, 36
